added logging to extensions
