# protos/runtimebase/openapi/runtime.swagger.json
@@ -1497,7 +1497,7 @@
     "RuntimeMessageRequest": {
       "type": "object",
       "properties": {
-        "uuid": {
+        "extensionUUID": {
           "type": "string"
         },
         "key": {
@@ -1521,6 +1521,9 @@
           "$ref": "#/definitions/RuntimeCommand"
         },
         "stringPayload": {
+          "type": "string"
+        },
+        "objectUUID": {
           "type": "string"
         }
       }
